[package]
name = "embedding-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
tracing = "0.1"

# For vector operations
ndarray = "0.15"
ndarray-stats = "0.5"

# For ONNX tensor operations
ndarray-linalg = "0.16"

# For caching and performance
dashmap = "5.0"
lru = "0.12"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# For tokenization and model loading
hf-hub = "0.3"
safetensors = "0.4"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
sqlx-cli = "0.7"

# XML parsing dependencies for graph modality
quick-xml = "0.31"
roxmltree = "0.19"

# DOT format parsing dependencies
petgraph = "0.6"
dot = "0.1"

# ML model loading dependencies
ort = { version = "2.0.0-rc.10", features = ["load-dynamic"] }
tokenizers = "0.15"
num_cpus = "1.16"
safetensors = "0.6.2"
hf-hub = "0.4.3"

# CLIP model support using Candle
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

[dev-dependencies]
tokio-test = "0.4"
