[package]
name = "enrichers"
version = "0.1.0"
edition = "2021"
authors = ["@darianrosebrook"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
lru = "0.12"
tempfile = "3.8"

[features]
default = []

[[bin]]
name = "enrichers"
path = "src/main.rs"
