[package]
name = "enrichers"
version = "0.1.0"
edition = "2021"
authors = ["@darianrosebrook"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
lru = "0.12"
regex = "1.10"
sha2 = "0.10"
tempfile = "3.8"
email_address = "0.2"
url = "2.4"

[features]
default = []

[[bin]]
name = "enrichers"
path = "src/main.rs"
