[package]
name = "indexers"
version = "0.1.0"
edition = "2021"
authors = ["@darianrosebrook"]

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"

# Database
sqlx = { version = "0.7", features = ["postgres", "uuid", "chrono", "json", "runtime-tokio-native-tls"] }

# Async utilities
async-trait = "0.1"
parking_lot = "0.12"
lru = "0.12"

# Search and indexing
tantivy = "0.24"  # BM25 full-text search
hnsw_rs = "0.1"   # HNSW vector search
faiss = "0.12"    # Alternative vector search (optional)

[features]
default = ["postgres"]
postgres = []

[[bin]]
name = "indexers"
path = "src/main.rs"
