[package]
name = "model-benchmarking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Benchmarking and metrics
criterion = "0.5"  # For micro-benchmarks
prometheus = "0.13"  # For metrics collection
statistical = "0.1"  # For statistical analysis

# ML/AI integration
# ML/AI integration (temporarily disabled due to rand version conflicts)
# TODO: Re-enable when rand version conflicts are resolved
# candle-core = "0.6"
# candle-nn = "0.6"
# candle-transformers = "0.6"

# Database for benchmark storage
sqlx.workspace = true

# Council integration
agent-agency-council = { path = "../council" }

