[package]
name = "model-benchmarking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Benchmarking and metrics
criterion = "0.5"  # For micro-benchmarks
prometheus = "0.13"  # For metrics collection
statistical = "0.1"  # For statistical analysis
rand = "0.8.5"  # For random number generation in benchmarks

# ML/AI integration
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"

# Database for benchmark storage
sqlx.workspace = true

# Council integration
agent-agency-council = { path = "../council" }

# Claim extraction integration
claim-extraction = { path = "../claim-extraction" }

# Apple Silicon integration for Core ML
agent-agency-apple-silicon = { path = "../apple-silicon", optional = true }

# For examples
tracing-subscriber = "0.3"

[features]
default = []
coreml = ["agent-agency-apple-silicon"]

