[package]
name = "agent-agency-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Database integration
agent-agency-database = { path = "../database" }

# Observability dependencies
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
