[package]
name = "agent-agency-observability"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Database integration
agent-agency-database = { path = "../database" }

# Observability dependencies
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Metrics backends
prometheus = "0.13"
cadence = "1.4"   # StatsD client

# Cache backends
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
