[package]
name = "orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
parking_lot = "0.12"
agent-agency-council = { path = "../council" }
agent-agency-apple-silicon = { path = "../apple-silicon" }
agent-agency-provenance = { path = "../provenance" }
agent-agency-resilience = { path = "../resilience" }
agent-agency-database = { path = "../database" }
agent-agency-contracts = { path = "../agent-agency-contracts" }
tracing = "0.1"
