[package]
name = "orchestration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
caws-runtime-validator = { path = "../caws/runtime-validator" }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "sync", "time"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono"] }
tokio-postgres = "0.7"
parking_lot = "0.12"
agent-agency-council = { path = "../council" }
agent-agency-apple-silicon = { path = "../apple-silicon" }
agent-agency-provenance = { path = "../provenance" }
agent-agency-resilience = { path = "../resilience" }
agent-agency-database = { path = "../database" }
agent-agency-contracts = { path = "../agent-agency-contracts" }
agent-agency-observability = { path = "../observability" }
claim-extraction = { path = "../claim-extraction" }
# agent-agency-workers = { path = "../workers" }  # Temporarily commented to resolve circular dependency
file_ops = { path = "../file_ops" }
tracing = "0.1"
flate2 = "1.0"
axum = "0.7"
axum-extra = "0.9"
sha2 = "0.10"
regex = "1.10"
once_cell = "1.19"
tokio-util = "0.7"

# Multimodal RAG integration dependencies
ingestors = { path = "../ingestors" }
enrichers = { path = "../enrichers" }
indexers = { path = "../indexers" }
agent-agency-research = { path = "../research" }
reqwest = { workspace = true, features = ["json"] }
clap = { version = "4.0", features = ["derive"] }

[[bin]]
name = "agent-agency"
path = "src/main.rs"
