[package]
name = "agent-agency-production"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
chrono.workspace = true

# Additional dependencies
anyhow = "1.0"
regex = "1.10"
rand = "0.8"

# Statistical libraries for quantile estimation
statrs = "0.16"  # Statistical analysis and distributions
streaming-stats = "0.2"  # Streaming statistical algorithms
quantiles = "0.7"  # Quantile estimation algorithms
sampling = "1.0"  # Statistical sampling
ordered-float = "4.0"  # Ordered floating point comparisons
