[package]
name = "agent-agency-provenance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Git integration
git2 = { version = "0.19", features = ["vendored-openssl"] }
# gitoxide = "0.37"  # Conflicts with sqlx SQLite versions, using git2 instead

# JWS signing
jsonwebtoken = "9.3"
ring = "0.17"
base64 = "0.22"

# Database connection pooling
deadpool = "0.10"
deadpool-postgres = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

